--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi[standard]>=0.112.2",
     "jinja2>=3.1.4",
+    "sqlalchemy>=2.0.32",
 ]
 
 [build-system]
