First version of config management

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ dependencies = [
     "sqlalchemy>=2.0.32",
     "segno>=1.6.1",
     "reportlab>=4.2.2",
+    "pydantic-settings>=2.4.0",
+    "python-dotenv>=1.0.1",
 ]
 
 [build-system]
