--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,13 @@ dependencies = [
     "jinja2>=3.1.4",
     "sqlalchemy>=2.0.32",
     "segno>=1.6.1",
+    "reportlab>=4.2.2",
 ]
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.pyright]
+venvPath = "."
+venv = ".venv"
