Exclude a local .venv from devcontainer

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -6,12 +6,19 @@ services:
       context: ..
       dockerfile: .devcontainer/Dockerfile
 
+    # It is important not to include the project virtual environment (.venv) in the mount,
+    # because the virtual environment is platform specific and we don't want to interfere
+    # with any existing virtual environment.
+    # We retain an existing .venv by mounting it as an anonymous volume.
     volumes:
       - ../..:/workspaces:cached
+      - /workspaces/openday-scavenger/.venv
 
     # Set environment variables here, so we overwrite any existing .env file settings.
     # This means you don't have to change your .env file when you use this devcontainer.
+    # We set the specific location for the .venv outside the working directory.
     environment:
+      - UV_PROJECT_ENVIRONMENT=/root/.cache/uv
       - DATABASE_SCHEME=postgresql+psycopg2
       - DATABASE_HOST=db
       - DATABASE_PORT=5432
