--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,6 +2,15 @@ FROM python:3.12-bullseye
 
 ENV PYTHONUNBUFFERED 1
 
-# We use uv in Docker to install the dependencies.
-# Since uv is so fast we install the dependencies as a postCreateCommand step.
-RUN pip install uv
+
+# The installer requires curl (and certificates) to download the release archive
+RUN apt-get update && apt-get install -y --no-install-recommends curl ca-certificates
+
+# Download the latest installer
+ADD https://astral.sh/uv/0.4.10/install.sh /uv-installer.sh
+
+# Run the installer then remove it
+RUN sh /uv-installer.sh && rm /uv-installer.sh
+
+# Ensure the installed binary is on the `PATH`
+ENV PATH="/root/.cargo/bin/:$PATH"
