Point Python interpreter to new venv location for pylance to work

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,7 +20,10 @@
             "extensions": [
                 "ms-python.python",
                 "ms-python.vscode-pylance"
-            ]
+            ],
+			"settings": { 
+				"python.defaultInterpreterPath": "/root/.cache/uv/bin/python"
+			}
         }
     }
 }
