--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "reportlab>=4.2.2",
     "pydantic-settings>=2.4.0",
     "python-dotenv>=1.0.1",
+    "plotly>=5.24.1",
+    "pandas>=2.2.3",
 ]
 
 [project.optional-dependencies]
