--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,10 @@ dependencies = [
     "reportlab>=4.2.2",
     "pydantic-settings>=2.4.0",
     "python-dotenv>=1.0.1",
+    "numpy>=2.1.1",
+    "ipykernel>=6.29.5",
+    "pillow>=10.4.0",
+    "matplotlib>=3.9.2",
 ]
 
 [project.optional-dependencies]
