--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "openday-scavenger"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = "~3.12"
+requires-python = "~=3.12"
 dependencies = [
     "fastapi[standard]>=0.114.0",
     "jinja2>=3.1.4",
