--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dev-dependencies = [
     "coverage>=7.6.1",
     "mypy>=1.11.2",
     "pyright>=1.1.379",
+    "pytest-asyncio>=0.24.0",
     "pytest-cov>=5.0.0",
     "pytest-mock>=3.14.0",
     "pytest>=8.3.3",
