--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,3 +8,9 @@ repos:
       args: [ --fix ]
     # Run the formatter.
     - id: ruff-format
+- repo: https://github.com/djlint/djLint
+  rev: v1.35.2
+  hooks:
+    - id: djlint-jinja
+      files: "\\.html"
+      types_or: ["html"]
