--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.12-bullseye
+FROM python:3.12-bullseye AS python_base
 
 ENV PYTHONUNBUFFERED 1
 
@@ -14,3 +14,15 @@ RUN sh /uv-installer.sh && rm /uv-installer.sh
 
 # Ensure the installed binary is on the `PATH`
 ENV PATH="/root/.cargo/bin/:$PATH"
+
+# Extra things needed to run e2e tests in CI
+# Ignore this for local/prod development
+FROM python_base AS python_e2e
+
+ENV UV_PROJECT_ENVIRONMENT=/root/.cache/uv
+
+WORKDIR /usr/src/app
+
+COPY . .
+
+RUN uv sync --all-extras
