--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,9 +64,8 @@ show_missing = true
 fail_under = 60
 
 [tool.djlint]
-# TODO: Enforce viewport?
 # Just the 'critical' rules for now. At some point we can enable
 # the full rule set and maybe even enforce formatting of html/templates
-# like we do with python files 
-ignore="H030,H031,J004,H008,J018,H029,H006,H025,H021,T001,T002,T003"
+# like we do with python files
+ignore="H030,H031,J004,J018,H029,H006,H025,H021,T001,T002,T003"
 profile="jinja"
