try older runner version
- Seems like latest is now pegged against ubuntu 24 rather than 22 which breaks the build.

--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -8,7 +8,8 @@ on:
 jobs:
   test:
     name: test-lint-format
-    runs-on: ubuntu-latest
+    # ubuntu-24.04 (latest) fails at the install step due to missing libjpeg
+    runs-on: ubuntu-22.04
 
     steps:
       - uses: actions/checkout@v4
